# PoIntInt

./: .gitignore  CMakeLists.txt  DESIGN_EXTENSIBLE_GRADIENT.md  DESIGN_PROPOSAL.md  IMPLEMENTATION_GUIDE.md  README.md  demo.py  demo_simple.py  form_factor_intersection_theory.md  pyproject.toml  simplicits_demo.ipynb  uv.toml
app/: main.cpp  visualize_gradient.cpp
app/align/: CMakeLists.txt  main.cpp  optimizer.cpp  similarity_measure.cpp  similarity_measure.hpp  warm_start.cpp  warm_start.hpp
cpp/: CMakeLists.txt
cpp/app/: CMakeLists.txt  main.cpp
cpp/app/align/: optimizer.hpp  similarity_measure.cpp
cpp/include/: analytical_intersection.hpp  computation_flags.hpp  compute_intersection_volume_multi_object.hpp  element_functions.hpp  form_factor_helpers.hpp
cpp/include/dof/: affine_dof_decomposed.hpp  dof_parameterization.hpp
cpp/include/geometry/: geometry_helpers.hpp  types.hpp
cpp/include/quadrature/: gauss_legendre.hpp  lebedev_io.hpp
cpp/pybind/: minimal_pybind.cpp  pybind.cpp
cpp/src/: analytical_intersection.cpp  compute_intersection_volume.cu  compute_intersection_volume_multi_object.cpp  compute_intersection_volume_multi_object.cu  compute_volume.cpp  element_functions.cpp
cpp/src/dof/: affine_dof.cpp  triangle_mesh_dof.cpp
cpp/src/dof/cuda/: affine_dof_cuda.cu  dof_cuda_interface.cpp  triangle_mesh_dof_cuda.cu
cpp/src/geometry/: geometry_helpers.cpp  packing.cpp
cpp/test/: CMakeLists.txt  test_config.h.in  test_gaussian_splats.cpp  test_intersection_volume_gradient.cpp  test_multi_object.cpp  test_unit_cube.cpp
demo/: CMakeLists.txt  bindings.cpp  build.sh  demo_intersection.py  demo_mesh_intersection.py  exp.py  exp_mesh.py  exp_mesh_results.csv  exp_results.csv  pyproject.toml
docs/: DESIGN_PROPOSAL.md  demo_plan.md
include/: compute_intersection_volume.hpp  compute_intersection_volume_gradient.hpp  compute_intersection_volume_multi_object.hpp  compute_volume.hpp  compute_volume_multi_object.hpp  compute_volume_unified.hpp  dof_parameterization.hpp  element_functions.hpp  gauss_legendre.hpp  geometry.hpp  geometry_packing.hpp  geometry_types.hpp  lebedev_io.hpp
include/cuda/: cuda_helpers.hpp
include/dof/: affine_dof.hpp  affine_dof_decomposed.hpp  dof_helpers.hpp  dof_parameterization.hpp  triangle_mesh_dof.hpp
include/dof/cuda/: affine_dof_cuda.hpp  dof_cuda_interface.hpp
include/geometry/: geometry.hpp  packing.hpp  types.hpp
include/quadrature/: gauss_legendre.hpp  kgrid.hpp  lebedev_io.hpp
pointint/: __init__.py
pointint/common/: __init__.py  optimization.py
pointint/core/: api.py  area.py  kernel.py
pointint/core/intersection/: __init__.py  form_factors.py  kgrid.py  primitives.py  volume.py
pointint/core/intersection/tests/: __init__.py  test_intersection.py
pointint/core/simulator/common/: collisions.py
pointint/core/simulator/materials/: __init__.py  material_utils.py  neohookean_elastic_material.py
pointint/core/simulator/simplicits/: easy_api.py  losses.py  precomputed.py
pointint/core/simulator/utils/: __init__.py
pointint/scripts/: demo.py  demo_viser.py  poIntInt.py  simplicits_demo.ipynb  simplicits_easy_api.ipynb
pointint/scripts/.ipynb_checkpoints/: poIntInt-checkpoint.py
pointint/scripts/cache/: spheres.pt
pointint/simplicits/: __init__.py  losses_warp.py
pointint/simulator/common/: __init__.py  collisions.py  optimization.py
pointint/simulator/materials/: __init__.py  material_utils.py  neohookean_elastic_material.py
pointint/simulator/simplicits/: __init__.py  easy_api.py  losses.py  losses_warp.py  precomputed.py
pointint/simulator/utils/: __init__.py  warp_utilities.py
pointint/utils/: warp_utilities.py
pointint/viewer/: __init__.py  viewer_server.py
python/: test_bindings.py  test_minimal.py
scripts/: simplicits_demo.ipynb
src/: compute_intersection_volume.cu  compute_intersection_volume_cpu.cpp  compute_intersection_volume_gradient.cu  compute_intersection_volume_gradient_cpu.cpp  compute_intersection_volume_multi_object.cpp  compute_intersection_volume_multi_object.cu  compute_volume.cu  compute_volume_multi_object.cu  compute_volume_unified.cu  compute_volume_unified_cpu.cpp  dof_parameterization.cpp  element_functions.cpp  form_factor_helpers.cpp  geometry_packing.cpp
src/dof/: affine_dof.cpp  affine_dof_decomposed.cpp  dof_parameterization.cpp  triangle_mesh_dof.cpp
src/dof/cuda/: affine_dof_cuda.cu  dof_cuda_interface.cpp  triangle_mesh_dof_cuda.cu
src/geometry/: geometry_helpers.cpp  packing.cpp
test/: test_config.h.in  test_dof_parameterization.cpp  test_gaussian_splats.cpp  test_intersection_volume_gradient.cpp  test_multi_object.cpp  test_sphere_pointcloud.cpp  test_unit_cube.cpp  test_volume_unified.cpp
